# fastpreprocess

./: .gitignore  Demo(running-from-notebook).ipynb  MANIFEST.in  Pipfile  Procfile  README.md  WorkBook.ipynb  app.py  blueprint.py  essential.py  fasteda.py  fastwork.py  operation.py  package-lock.json  requirements.txt  setup.cfg  setup.py
Fasteda/: fastwork.py  operation.py
Fasteda/static/dataset/: cars.csv
Fasteda/static/js/: main.js
adad/: fasteda.py
adad/static/js/: main.js
adad/template/: Index.html
fasteda/: fastwork.py  operation.py
fasteda/static/dataset/: sample1.csv
fasteda/static/js/: main.js
fasteda/template/: FastEda.html  ViewNewDataset.html  layout.html
fastpreprocess/: essential.py  fastwork.py  operation.py  process.py
fastpreprocess/static/: car_sample.csv  essential_chart.js  main.js  style.css
fastpreprocess/template/: 1.html  Fastprocess.html  Index.html  ViewNewDataset.html  action_center.html  error_file.html  layout.html  log.html
fastprocess/: essential.py  fastwork.py  operation.py  process.py
fastprocess/static/: essential_chart.js  main.js  style.css
fastprocess/static/js/: main.js
fastprocess/template/: FastEda.html  Fastprocess.html  Index.html  error_file.html  layout.html
static/css/: style.css
static/dataset/: sample.csv
static/js/: main.js
template/: Errorhandel.html  FastEda.html  FullEda.html  ViewNewDataset.html  error_file.html  index.html  layout.html  testing.html
