[metadata]
name = Fasteda
version = attr: Fasteda.__version__
description = A new way to data analyze.
long_description = file: README.md
long_description_content_type = text/markdown
author = Lalkrishna Arjun
author_email = lkarjun.k@gmail.com
license = MIT
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.9

project_urls = 
  Source Code = https://github.com/lkarjun/Fasteda

[options]
zip_safe = True
packages = find:
install_requires =
  pandas
  fastapi
  numpy
  tqdm
include_package_data = True
python_requires = >=3.7

[options.package_data]
Fasteda = */*.png
Fasteda = */*.js
Fasteda = */*.gif
Fasteda = */*.csv


[options.packages.find]
exclude=tests, tests.*